# voiceobs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.grafana.yml  docker-compose.yml  grafana-datasources.yml  otel-collector-config.yaml  package-lock.json  prometheus.yml  prometheus.yml.bak  pyproject.toml  tempo-config.yaml
.github/workflows/: ci.yml  docs.yml  voice-regression.yml.example
dashboards/: README.md  voiceobs-detailed.json  voiceobs-overview.json
docs/: ci-workflow.md  failures.md  json-schema.md  metrics-api.md  openapi.yaml  server-api.md
docs-site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: changelog.md  examples.md  installation.md  integrations.md  overview.md
docs-site/docs/advanced/: failures.md
docs-site/docs/api/: json-schema.md  test-management.md
docs-site/docs/guides/: cli.md  configuration.md  grafana-setup.md  server.md  ui.md
e2e/: .env.test.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: auth.fixture.ts
e2e/helpers/: api-client.ts  org.ts  test-data.ts
e2e/pages/: dashboard.page.ts  login.page.ts  persona-create.page.ts  persona-detail.page.ts  persona-edit.page.ts  persona-list.page.ts  sidebar.page.ts
e2e/specs/: auth.spec.ts  organization.spec.ts
e2e/specs/personas/: personas-crud.spec.ts  personas-features.spec.ts  personas-isolation.spec.ts  personas-system.spec.ts
examples/livekit/: .env.example  README.md  main.py  pyproject.toml  voiceobs.yaml
examples/overlap_detection/: .env.example  README.md  pyproject.toml  run.py
examples/vocode/: .env.example  README.md  main.py  pyproject.toml
examples/voice_pipeline/: README.md  my_traces.jsonl  pyproject.toml  run.py
integrations/pipecat-examples/: README.md  bot-openai-voiceobs.py
integrations/pipecat-examples/patch/: 0001-add-voiceobs-turn-spans.patch
src/voiceobs/: __init__.py  _version.py  analyzer.py  classifier.py  cli.py  compare.py  config.py  context.py  decorators.py  exporters.py  failures.py  report.py  stages.py  timeline.py  tracing.py  types.py
src/voiceobs/eval/: __init__.py  evaluator.py  generator.py  prompts.py  types.py
src/voiceobs/exporters/: __init__.py  exporters.py  otlp.py
src/voiceobs/integrations/: __init__.py  base.py  livekit.py  vocode.py
src/voiceobs/server/: __init__.py  app.py  dependencies.py  models.py  store.py  utils.py
src/voiceobs/sim/: __init__.py  persona.py  prompt.py
tests/: conftest.py  test_analyzer.py  test_classifier.py  test_cli.py  test_cli_db.py  test_compare.py  test_config.py  test_context.py  test_decorators.py  test_e2e.py  test_eval.py  test_exporters.py  test_failures.py  test_generator.py  test_integration_db.py  test_integrations_base.py  test_integrations_livekit.py  test_integrations_vocode.py  test_models.py  test_otlp_exporter.py  test_persona.py  test_report.py  test_server.py  test_stages.py  test_storage.py  test_storage_local.py  test_storage_s3.py  test_timeline.py  test_tracing.py  test_version.py
tests/server/: __init__.py  conftest.py  test_agent_context.py  test_analysis.py  test_app.py  test_audio.py  test_cli.py  test_conversations.py  test_conversations_search.py  test_deepgram_tts_service.py  test_e2e.py  test_elevenlabs_tts_service.py  test_errors.py  test_generate_more_endpoint.py  test_generation_status_endpoint.py  test_health.py  test_load.py  test_metrics.py  test_openai_tts_service.py  test_persona_is_default.py  test_persona_matcher.py  test_persona_models.py  test_persona_request_models.py  test_persona_service_dependency.py  test_personas.py  test_scenario_crud_models.py  test_scenario_generation_fields.py  test_scenario_generation_schemas.py  test_scenario_generation_service.py  test_scenario_persona_update.py  test_spans.py  test_storage_utils.py  test_store.py  test_suite_agent_id.py  test_suite_create_triggers_generation.py  test_suite_generation_error.py  test_suite_generation_status.py  test_suite_update_restrictions.py  test_test_executions.py  test_test_scenarios.py  (+3 more)
tests/server/auth/: __init__.py  test_context.py  test_dependencies.py  test_jwt.py
tests/server/config/: test_verification.py
tests/server/db/: conftest.py  test_connection.py  test_conversation_repository.py  test_dependencies.py  test_failure_repository.py  test_metrics_utils.py  test_migration_004_personas.py  test_migration_022_org_personas.py  test_migrations.py  test_persona_repository.py  test_persona_row_org_fields.py  test_span_repository.py  test_test_scenario_repository.py  test_turn_repository.py
tests/server/routes/: test_agents.py  test_auth.py  test_failures.py  test_organization_invites.py  test_organization_members.py  test_organizations.py  test_personas.py  test_test_executions.py  test_test_scenarios.py  test_test_suites.py  test_traits.py
tests/server/services/: test_deepgram_tts_service.py  test_elevenlabs_tts_service.py  test_gemini_llm.py  test_llm_factory.py  test_openai_llm.py  test_organization_service.py  test_persona_service.py  test_services_init.py  test_tts_factory.py
tests/server/storage/: test_s3_storage.py  test_storage.py
tests/server/utils/: test_common.py  test_livekit_utils.py  test_persona_llm.py  test_persona_utils.py  test_storage.py  test_utils.py  test_validators.py
ui/: .env.local.example  .prettierrc  README.md  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/(auth)/: layout.tsx
ui/app/(dashboard)/: layout.tsx  page.tsx
ui/app/agents/: page.tsx
ui/app/conversations/: page.tsx
ui/contexts/: auth-context.tsx
ui/hooks/: index.ts  use-toast.ts  useAgentActions.ts  useGenerationPolling.ts  useTestScenarios.ts  useTestSuiteActions.ts  useVerificationPolling.ts
ui/lib/: api.ts  audio.ts  logger.ts  mockData.ts  types.ts
(+300 files in other folders)
